Carbon/Parser/CarbonParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from G:/Dev/Carbon/Carbon/Parser/Grammar\Carbon.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class CarbonParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		PP_IMPORT=1, PP_DEFINE=2, CLASS=3, INTERFACE=4, PROTECT=5, PUBLIC=6, PRIVATE=7, 
		INTERNAL=8, G_ASSEMBLY=9, G_DOT=10, G_ENTRY=11, G_ELLIPSE=12, PROP_GET=13, 
		PROP_SET=14, CMP=15, CM_GTR=16, CM_LSS=17, CM_EQU=18, CM_GTR_EQU=19, CM_LSS_EQU=20, 
		UNARY_MATH=21, SET=22, AMB_MATH=23, BIN_MATH=24, A_SET=25, A_ADD=26, A_SUB=27, 
		A_MULT=28, A_DIV=29, A_EXP=30, A_MOD=31, A_SET_SUM=32, A_SET_DIFF=33, 
		A_SET_MULT=34, A_SET_QUOTIENT=35, A_INCREMENT=36, A_DECRIMENT=37, UNARY_LG_OP=38, 
		BIN_LG_OP=39, L_OR=40, L_AND=41, L_NAND=42, L_NOR=43, L_XOR=44, L_XNOR=45, 
		L_NOT=46, UNARY_BW_OP=47, BIN_BW_OP=48, BL_AND=49, BL_OR=50, BL_INV=51, 
		BL_LEFT=52, BL_RIGHT=53, CTRL_CND=54, CTRL_KW=55, C_IF=56, C_ELSE=57, 
		C_WHILE=58, C_FOR=59, C_GOTO=60, C_BREAK=61, C_CONT=62, C_IN=63, L_BRACKET=64, 
		R_BRACKET=65, L_PARANTH=66, R_PARANTH=67, L_BRACE=68, R_BRACE=69, LINE_COMMENT=70, 
		BLOCK_COMMENT=71, BOOL_VAL=72, REF_VAL=73, VALUE=74, THIS=75, TRUE=76, 
		FALSE=77, RETURN=78, PRIMITIVE=79, NUMBER=80, STRING=81, CHAR=82, COMMA=83, 
		INTEGER=84, DECIMAL=85, IDENTIFIER=86, SEMI=87, WS=88;
	public const int
		RULE_carbon = 0, RULE_symbol_id = 1, RULE_preproc = 2, RULE_pp_import = 3, 
		RULE_pp_define = 4, RULE_statement = 5, RULE_expr = 6, RULE_classExpr = 7, 
		RULE_interfaceExpr = 8, RULE_inheritListExpr = 9, RULE_procCallExpr = 10, 
		RULE_bodyExpr = 11, RULE_groupExpr = 12, RULE_fncGroupExpr = 13, RULE_forGroupExpr = 14, 
		RULE_whileGroupExpr = 15, RULE_indexExpr = 16, RULE_gotoExpr = 17, RULE_varDeclExpr = 18, 
		RULE_propDefExpr = 19, RULE_propGetExpr = 20, RULE_propSetExpr = 21, RULE_fncDeclExpr = 22, 
		RULE_ctrlCndExpr = 23, RULE_ctrlWhileExpr = 24, RULE_ctrlForExpr = 25, 
		RULE_setExpr = 26, RULE_mathUnExpr = 27, RULE_mathBinExpr = 28, RULE_compValExpr = 29, 
		RULE_logicBinExpr = 30, RULE_logicUnExpr = 31, RULE_valueExpr = 32, RULE_mathUnLeftExpr = 33, 
		RULE_mathUnRightExpr = 34, RULE_boolValsExpr = 35, RULE_ctrlKwExpr = 36;
	public static readonly string[] ruleNames = {
		"carbon", "symbol_id", "preproc", "pp_import", "pp_define", "statement", 
		"expr", "classExpr", "interfaceExpr", "inheritListExpr", "procCallExpr", 
		"bodyExpr", "groupExpr", "fncGroupExpr", "forGroupExpr", "whileGroupExpr", 
		"indexExpr", "gotoExpr", "varDeclExpr", "propDefExpr", "propGetExpr", 
		"propSetExpr", "fncDeclExpr", "ctrlCndExpr", "ctrlWhileExpr", "ctrlForExpr", 
		"setExpr", "mathUnExpr", "mathBinExpr", "compValExpr", "logicBinExpr", 
		"logicUnExpr", "valueExpr", "mathUnLeftExpr", "mathUnRightExpr", "boolValsExpr", 
		"ctrlKwExpr"
	};

	private static readonly string[] _LiteralNames = {
		null, "'import'", "'define'", "'class'", "'interface'", null, "'public'", 
		"'private'", "'internal'", "'__asm__'", "'.'", "'entry'", "'...'", "'get'", 
		"'set'", null, "'>'", "'<'", "'=='", "'>='", "'<='", null, null, null, 
		null, "'='", "'+'", "'-'", "'*'", "'/'", "'**'", "'%'", "'+='", "'-='", 
		"'*='", "'/='", "'++'", "'--'", null, null, "'||'", "'&&'", "'!&'", "'!|'", 
		"'^|'", "'^!|'", "'!'", null, null, "'&'", "'|'", "'~'", "'<<'", "'>>'", 
		null, null, "'if'", "'else'", "'while'", "'for'", "'goto'", "'break'", 
		"'continue'", "'in'", "'['", "']'", "'('", "')'", "'{'", "'}'", null, 
		null, null, null, "'value'", "'this'", "'true'", "'false'", "'return'", 
		null, null, null, null, "','", null, null, null, "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PP_IMPORT", "PP_DEFINE", "CLASS", "INTERFACE", "PROTECT", "PUBLIC", 
		"PRIVATE", "INTERNAL", "G_ASSEMBLY", "G_DOT", "G_ENTRY", "G_ELLIPSE", 
		"PROP_GET", "PROP_SET", "CMP", "CM_GTR", "CM_LSS", "CM_EQU", "CM_GTR_EQU", 
		"CM_LSS_EQU", "UNARY_MATH", "SET", "AMB_MATH", "BIN_MATH", "A_SET", "A_ADD", 
		"A_SUB", "A_MULT", "A_DIV", "A_EXP", "A_MOD", "A_SET_SUM", "A_SET_DIFF", 
		"A_SET_MULT", "A_SET_QUOTIENT", "A_INCREMENT", "A_DECRIMENT", "UNARY_LG_OP", 
		"BIN_LG_OP", "L_OR", "L_AND", "L_NAND", "L_NOR", "L_XOR", "L_XNOR", "L_NOT", 
		"UNARY_BW_OP", "BIN_BW_OP", "BL_AND", "BL_OR", "BL_INV", "BL_LEFT", "BL_RIGHT", 
		"CTRL_CND", "CTRL_KW", "C_IF", "C_ELSE", "C_WHILE", "C_FOR", "C_GOTO", 
		"C_BREAK", "C_CONT", "C_IN", "L_BRACKET", "R_BRACKET", "L_PARANTH", "R_PARANTH", 
		"L_BRACE", "R_BRACE", "LINE_COMMENT", "BLOCK_COMMENT", "BOOL_VAL", "REF_VAL", 
		"VALUE", "THIS", "TRUE", "FALSE", "RETURN", "PRIMITIVE", "NUMBER", "STRING", 
		"CHAR", "COMMA", "INTEGER", "DECIMAL", "IDENTIFIER", "SEMI", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Carbon.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static CarbonParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CarbonParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CarbonParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CarbonContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(CarbonParser.Eof, 0); }
		public PreprocContext[] preproc() {
			return GetRuleContexts<PreprocContext>();
		}
		public PreprocContext preproc(int i) {
			return GetRuleContext<PreprocContext>(i);
		}
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public CarbonContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_carbon; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.EnterCarbon(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.ExitCarbon(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICarbonVisitor<TResult> typedVisitor = visitor as ICarbonVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCarbon(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CarbonContext carbon() {
		CarbonContext _localctx = new CarbonContext(Context, State);
		EnterRule(_localctx, 0, RULE_carbon);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 76;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case PP_IMPORT:
				case PP_DEFINE:
					{
					State = 74; preproc();
					}
					break;
				case CLASS:
				case INTERFACE:
				case PROTECT:
				case UNARY_MATH:
				case AMB_MATH:
				case UNARY_LG_OP:
				case CTRL_CND:
				case CTRL_KW:
				case C_WHILE:
				case C_FOR:
				case C_GOTO:
				case L_BRACKET:
				case L_PARANTH:
				case L_BRACE:
				case BOOL_VAL:
				case REF_VAL:
				case PRIMITIVE:
				case IDENTIFIER:
					{
					State = 75; statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PP_IMPORT) | (1L << PP_DEFINE) | (1L << CLASS) | (1L << INTERFACE) | (1L << PROTECT) | (1L << UNARY_MATH) | (1L << AMB_MATH) | (1L << UNARY_LG_OP) | (1L << CTRL_CND) | (1L << CTRL_KW) | (1L << C_WHILE) | (1L << C_FOR) | (1L << C_GOTO))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (L_BRACKET - 64)) | (1L << (L_PARANTH - 64)) | (1L << (L_BRACE - 64)) | (1L << (BOOL_VAL - 64)) | (1L << (REF_VAL - 64)) | (1L << (PRIMITIVE - 64)) | (1L << (IDENTIFIER - 64)))) != 0) );
			State = 82; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Symbol_idContext : ParserRuleContext {
		public ITerminalNode[] IDENTIFIER() { return GetTokens(CarbonParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(CarbonParser.IDENTIFIER, i);
		}
		public ITerminalNode[] G_DOT() { return GetTokens(CarbonParser.G_DOT); }
		public ITerminalNode G_DOT(int i) {
			return GetToken(CarbonParser.G_DOT, i);
		}
		public Symbol_idContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_symbol_id; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.EnterSymbol_id(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.ExitSymbol_id(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICarbonVisitor<TResult> typedVisitor = visitor as ICarbonVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSymbol_id(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Symbol_idContext symbol_id() {
		Symbol_idContext _localctx = new Symbol_idContext(Context, State);
		EnterRule(_localctx, 2, RULE_symbol_id);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 84; Match(IDENTIFIER);
			State = 89;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 85; Match(G_DOT);
					State = 86; Match(IDENTIFIER);
					}
					} 
				}
				State = 91;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PreprocContext : ParserRuleContext {
		public ITerminalNode SEMI() { return GetToken(CarbonParser.SEMI, 0); }
		public Pp_importContext[] pp_import() {
			return GetRuleContexts<Pp_importContext>();
		}
		public Pp_importContext pp_import(int i) {
			return GetRuleContext<Pp_importContext>(i);
		}
		public Pp_defineContext[] pp_define() {
			return GetRuleContexts<Pp_defineContext>();
		}
		public Pp_defineContext pp_define(int i) {
			return GetRuleContext<Pp_defineContext>(i);
		}
		public PreprocContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preproc; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.EnterPreproc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.ExitPreproc(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICarbonVisitor<TResult> typedVisitor = visitor as ICarbonVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreproc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PreprocContext preproc() {
		PreprocContext _localctx = new PreprocContext(Context, State);
		EnterRule(_localctx, 4, RULE_preproc);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 94;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case PP_IMPORT:
					{
					State = 92; pp_import();
					}
					break;
				case PP_DEFINE:
					{
					State = 93; pp_define();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 96;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==PP_IMPORT || _la==PP_DEFINE );
			State = 98; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Pp_importContext : ParserRuleContext {
		public ITerminalNode PP_IMPORT() { return GetToken(CarbonParser.PP_IMPORT, 0); }
		public Symbol_idContext[] symbol_id() {
			return GetRuleContexts<Symbol_idContext>();
		}
		public Symbol_idContext symbol_id(int i) {
			return GetRuleContext<Symbol_idContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(CarbonParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(CarbonParser.COMMA, i);
		}
		public Pp_importContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pp_import; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.EnterPp_import(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.ExitPp_import(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICarbonVisitor<TResult> typedVisitor = visitor as ICarbonVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPp_import(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Pp_importContext pp_import() {
		Pp_importContext _localctx = new Pp_importContext(Context, State);
		EnterRule(_localctx, 6, RULE_pp_import);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 100; Match(PP_IMPORT);
			State = 101; symbol_id();
			State = 106;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 102; Match(COMMA);
					State = 103; symbol_id();
					}
					} 
				}
				State = 108;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Pp_defineContext : ParserRuleContext {
		public ITerminalNode PP_DEFINE() { return GetToken(CarbonParser.PP_DEFINE, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(CarbonParser.IDENTIFIER, 0); }
		public ITerminalNode PRIMITIVE() { return GetToken(CarbonParser.PRIMITIVE, 0); }
		public Pp_defineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pp_define; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.EnterPp_define(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.ExitPp_define(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICarbonVisitor<TResult> typedVisitor = visitor as ICarbonVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPp_define(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Pp_defineContext pp_define() {
		Pp_defineContext _localctx = new Pp_defineContext(Context, State);
		EnterRule(_localctx, 8, RULE_pp_define);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109; Match(PP_DEFINE);
			State = 110; Match(IDENTIFIER);
			State = 111; Match(PRIMITIVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public ClassExprContext classExpr() {
			return GetRuleContext<ClassExprContext>(0);
		}
		public InterfaceExprContext interfaceExpr() {
			return GetRuleContext<InterfaceExprContext>(0);
		}
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode SEMI() { return GetToken(CarbonParser.SEMI, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICarbonVisitor<TResult> typedVisitor = visitor as ICarbonVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 10, RULE_statement);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case PROTECT:
			case UNARY_MATH:
			case AMB_MATH:
			case UNARY_LG_OP:
			case CTRL_CND:
			case CTRL_KW:
			case C_WHILE:
			case C_FOR:
			case C_GOTO:
			case L_BRACKET:
			case L_PARANTH:
			case L_BRACE:
			case BOOL_VAL:
			case REF_VAL:
			case PRIMITIVE:
			case IDENTIFIER:
				{
				State = 114;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 113; expr();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 116;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				State = 119;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==SEMI) {
					{
					State = 118; Match(SEMI);
					}
				}

				}
				break;
			case CLASS:
				{
				State = 121; classExpr();
				}
				break;
			case INTERFACE:
				{
				State = 122; interfaceExpr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public BodyExprContext bodyExpr() {
			return GetRuleContext<BodyExprContext>(0);
		}
		public GroupExprContext groupExpr() {
			return GetRuleContext<GroupExprContext>(0);
		}
		public IndexExprContext indexExpr() {
			return GetRuleContext<IndexExprContext>(0);
		}
		public FncDeclExprContext fncDeclExpr() {
			return GetRuleContext<FncDeclExprContext>(0);
		}
		public VarDeclExprContext varDeclExpr() {
			return GetRuleContext<VarDeclExprContext>(0);
		}
		public ProcCallExprContext procCallExpr() {
			return GetRuleContext<ProcCallExprContext>(0);
		}
		public CtrlCndExprContext ctrlCndExpr() {
			return GetRuleContext<CtrlCndExprContext>(0);
		}
		public CtrlForExprContext ctrlForExpr() {
			return GetRuleContext<CtrlForExprContext>(0);
		}
		public CtrlWhileExprContext ctrlWhileExpr() {
			return GetRuleContext<CtrlWhileExprContext>(0);
		}
		public SetExprContext setExpr() {
			return GetRuleContext<SetExprContext>(0);
		}
		public MathUnExprContext mathUnExpr() {
			return GetRuleContext<MathUnExprContext>(0);
		}
		public MathBinExprContext mathBinExpr() {
			return GetRuleContext<MathBinExprContext>(0);
		}
		public CompValExprContext compValExpr() {
			return GetRuleContext<CompValExprContext>(0);
		}
		public LogicBinExprContext logicBinExpr() {
			return GetRuleContext<LogicBinExprContext>(0);
		}
		public LogicUnExprContext logicUnExpr() {
			return GetRuleContext<LogicUnExprContext>(0);
		}
		public CtrlKwExprContext ctrlKwExpr() {
			return GetRuleContext<CtrlKwExprContext>(0);
		}
		public GotoExprContext gotoExpr() {
			return GetRuleContext<GotoExprContext>(0);
		}
		public ValueExprContext valueExpr() {
			return GetRuleContext<ValueExprContext>(0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.EnterExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.ExitExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICarbonVisitor<TResult> typedVisitor = visitor as ICarbonVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(Context, State);
		EnterRule(_localctx, 12, RULE_expr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 143;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				{
				State = 125; bodyExpr();
				}
				break;
			case 2:
				{
				State = 126; groupExpr();
				}
				break;
			case 3:
				{
				State = 127; indexExpr();
				}
				break;
			case 4:
				{
				State = 128; fncDeclExpr();
				}
				break;
			case 5:
				{
				State = 129; varDeclExpr();
				}
				break;
			case 6:
				{
				State = 130; procCallExpr();
				}
				break;
			case 7:
				{
				State = 131; ctrlCndExpr();
				}
				break;
			case 8:
				{
				State = 132; ctrlForExpr();
				}
				break;
			case 9:
				{
				State = 133; ctrlWhileExpr();
				}
				break;
			case 10:
				{
				State = 134; setExpr();
				}
				break;
			case 11:
				{
				State = 135; mathUnExpr();
				}
				break;
			case 12:
				{
				State = 136; mathBinExpr();
				}
				break;
			case 13:
				{
				State = 137; compValExpr();
				}
				break;
			case 14:
				{
				State = 138; logicBinExpr();
				}
				break;
			case 15:
				{
				State = 139; logicUnExpr();
				}
				break;
			case 16:
				{
				State = 140; ctrlKwExpr();
				}
				break;
			case 17:
				{
				State = 141; gotoExpr();
				}
				break;
			case 18:
				{
				State = 142; valueExpr();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassExprContext : ParserRuleContext {
		public ITerminalNode CLASS() { return GetToken(CarbonParser.CLASS, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(CarbonParser.IDENTIFIER, 0); }
		public BodyExprContext bodyExpr() {
			return GetRuleContext<BodyExprContext>(0);
		}
		public InheritListExprContext inheritListExpr() {
			return GetRuleContext<InheritListExprContext>(0);
		}
		public ClassExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classExpr; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.EnterClassExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICarbonListener typedListener = listener as ICarbonListener;
			if (typedListener != null) typedListener.ExitClassExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICarbonVisitor<TResult> typedVisitor = visitor as ICarbonVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassExpr(this);
